parserBisonFlex/GenesysParser.output
Terminais sem uso na gramática

   oNOT


Estado 53 conflitos: 1 de deslocamento/redução
Estado 111 conflitos: 1 de deslocamento/redução
Estado 150 conflitos: 13 de deslocamento/redução
Estado 165 conflitos: 13 de deslocamento/redução
Estado 168 conflitos: 1 de deslocamento/redução
Estado 169 conflitos: 1 de deslocamento/redução
Estado 170 conflitos: 1 de deslocamento/redução
Estado 171 conflitos: 1 de deslocamento/redução
Estado 172 conflitos: 1 de deslocamento/redução
Estado 173 conflitos: 1 de deslocamento/redução
Estado 174 conflitos: 1 de deslocamento/redução
Estado 175 conflitos: 1 de deslocamento/redução
Estado 176 conflitos: 1 de deslocamento/redução
Estado 177 conflitos: 13 de deslocamento/redução
Estado 178 conflitos: 1 de deslocamento/redução
Estado 179 conflitos: 1 de deslocamento/redução
Estado 180 conflitos: 1 de deslocamento/redução
Estado 234 conflitos: 14 de deslocamento/redução
Estado 262 conflitos: 13 de deslocamento/redução
Estado 267 conflitos: 13 de deslocamento/redução
Estado 273 conflitos: 13 de deslocamento/redução
Estado 293 conflitos: 13 de deslocamento/redução
Estado 296 conflitos: 13 de deslocamento/redução
Estado 308 conflitos: 13 de deslocamento/redução
Estado 309 conflitos: 13 de deslocamento/redução


Gramática

    0 $accept: input "end of file"

    1 input: %empty
    2      | input '\n'
    3      | input programa
    4      | illegal
    5      | error '\n'

    6 programa: expressao

    7 expressao: numero
    8          | funcao
    9          | comando
   10          | atribuicao
   11          | aritmetica
   12          | relacional
   13          | "(" expressao ")"
   14          | atributo
   15          | variavel
   16          | formula

   17 numero: NUMD
   18       | NUMH

   19 aritmetica: expressao "+" expressao
   20           | expressao "-" expressao
   21           | expressao "/" expressao
   22           | expressao "*" expressao
   23           | expressao "^" expressao
   24           | fEXP "(" expressao ")"
   25           | "-" expressao

   26 relacional: expressao oAND expressao
   27           | expressao oOR expressao
   28           | expressao "<" expressao
   29           | expressao oLE expressao
   30           | expressao ">" expressao
   31           | expressao oGE expressao
   32           | expressao oEQ expressao
   33           | expressao oNE expressao

   34 comando: comandoIF
   35        | comandoFOR

   36 comandoIF: cIF "(" expressao ")" expressao cELSE expressao
   37          | cIF "(" expressao ")" expressao

   38 comandoFOR: cFOR variavel "=" expressao cTO expressao cDO atribuicao
   39           | cFOR atributo "=" expressao cTO expressao cDO atribuicao

   40 funcao: funcaoArit
   41       | funcaoTrig
   42       | funcaoProb
   43       | funcaoKernel
   44       | funcaoPlugin
   45       | funcaoUser

   46 funcaoKernel: fTNOW
   47             | fTFIN

   48 funcaoTrig: fSIN "(" expressao ")"
   49           | fCOS "(" expressao ")"

   50 funcaoArit: fROUND "(" expressao ")"
   51           | fFRAC "(" expressao ")"
   52           | fTRUNC "(" expressao ")"
   53           | fMOD "(" expressao "," expressao ")"

   54 funcaoProb: fEXPO "(" expressao ")"
   55           | fNORM "(" expressao "," expressao ")"
   56           | fUNIF "(" expressao "," expressao ")"
   57           | fWEIB "(" expressao "," expressao ")"
   58           | fLOGN "(" expressao "," expressao ")"
   59           | fGAMM "(" expressao "," expressao ")"
   60           | fERLA "(" expressao "," expressao ")"
   61           | fTRIA "(" expressao "," expressao "," expressao ")"
   62           | fBETA "(" expressao "," expressao "," expressao "," expressao ")"
   63           | fDISC "(" listaparm ")"

   64 funcaoUser: "USER" "(" expressao ")"

   65 listaparm: listaparm "," expressao "," expressao
   66          | expressao "," expressao

   67 illegal: ILLEGAL

   68 atributo: ATRIB
   69         | ATRIB "[" expressao "]"
   70         | ATRIB "[" expressao "," expressao "]"
   71         | ATRIB "[" expressao "," expressao "," expressao "]"

   72 variavel: VARI
   73         | VARI "[" expressao "]"
   74         | VARI "[" expressao "," expressao "]"
   75         | VARI "[" expressao "," expressao "," expressao "]"

   76 atribuicao: ATRIB "=" expressao
   77           | ATRIB "[" expressao "]" "=" expressao
   78           | ATRIB "[" expressao "," expressao "]" "=" expressao
   79           | ATRIB "[" expressao "," expressao "," expressao "]" "=" expressao
   80           | VARI "=" expressao
   81           | VARI "[" expressao "]" "=" expressao
   82           | VARI "[" expressao "," expressao "]" "=" expressao
   83           | VARI "[" expressao "," expressao "," expressao "]" "=" expressao

   84 formula: FORM

   85 funcaoPlugin: CTEZERO
   86             | fNQ "(" QUEUE ")"
   87             | fLASTINQ "(" QUEUE ")"
   88             | fFIRSTINQ "(" QUEUE ")"
   89             | fSAQUE "(" QUEUE "," ATRIB ")"
   90             | fAQUE "(" QUEUE "," NUMD "," ATRIB ")"
   91             | fMR "(" RESOURCE ")"
   92             | fNR "(" RESOURCE ")"
   93             | fRESSEIZES "(" RESOURCE ")"
   94             | fSTATE "(" RESOURCE ")"
   95             | fIRF "(" RESOURCE ")"
   96             | fSETSUM "(" SET ")"
   97             | fNUMSET "(" SET ")"
   98             | CSTAT
   99             | fTAVG "(" CSTAT ")"


Terminais, com as regras onde eles aparecem

"end of file" (0) 0
'\n' (10) 2 5
error (256) 5
NUMD (258) 17 90
NUMH (259) 18
CTEZERO (260) 85
oLE (261) 29
oGE (262) 31
oEQ (263) 32
oNE (264) 33
oAND (265) 26
oOR (266) 27
oNOT (267)
fSIN (268) 48
fCOS (269) 49
fROUND (270) 50
fMOD (271) 53
fTRUNC (272) 52
fFRAC (273) 51
fEXP (274) 24
fEXPO (275) 54
fNORM (276) 55
fUNIF (277) 56
fWEIB (278) 57
fLOGN (279) 58
fGAMM (280) 59
fERLA (281) 60
fTRIA (282) 61
fBETA (283) 62
fDISC (284) 63
fTNOW (285) 46
fTFIN (286) 47
cIF (287) 36 37
cELSE (288) 36
cFOR (289) 38 39
cTO (290) 38 39
cDO (291) 38 39
ATRIB (292) 68 69 70 71 76 77 78 79 89 90
ILLEGAL (293) 67
RESOURCE (294) 91 92 93 94 95
fNR (295) 92
fMR (296) 91
fIRF (297) 95
fRESSEIZES (298) 93
fSTATE (299) 94
fSETSUM (300) 96
QUEUE (301) 86 87 88 89 90
fNQ (302) 86
fFIRSTINQ (303) 88
fLASTINQ (304) 87
fSAQUE (305) 89
fAQUE (306) 90
SET (307) 96 97
fNUMSET (308) 97
CSTAT (309) 98 99
fTAVG (310) 99
VARI (311) 72 73 74 75 80 81 82 83
FORM (312) 84
"(" (313) 13 24 36 37 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
    63 64 86 87 88 89 90 91 92 93 94 95 96 97 99
")" (314) 13 24 36 37 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
    63 64 86 87 88 89 90 91 92 93 94 95 96 97 99
"[" (315) 69 70 71 73 74 75 77 78 79 81 82 83
"]" (316) 69 70 71 73 74 75 77 78 79 81 82 83
"+" (317) 19
"-" (318) 20 25
"*" (319) 22
"^" (320) 23
"/" (321) 21
"<" (322) 28
">" (323) 30
"=" (324) 38 39 76 77 78 79 80 81 82 83
"," (325) 53 55 56 57 58 59 60 61 62 65 66 70 71 74 75 78 79 82 83
    89 90
NEG (326)
"USER" (327) 64


Não terminais com as regras onde eles aparecem

$accept (74)
    à esquerda: 0
input (75)
    à esquerda: 1 2 3 4 5, à direita: 0 2 3
programa (76)
    à esquerda: 6, à direita: 3
expressao (77)
    à esquerda: 7 8 9 10 11 12 13 14 15 16, à direita: 6 13 19 20
    21 22 23 24 25 26 27 28 29 30 31 32 33 36 37 38 39 48 49 50 51
    52 53 54 55 56 57 58 59 60 61 62 64 65 66 69 70 71 73 74 75 76
    77 78 79 80 81 82 83
numero (78)
    à esquerda: 17 18, à direita: 7
aritmetica (79)
    à esquerda: 19 20 21 22 23 24 25, à direita: 11
relacional (80)
    à esquerda: 26 27 28 29 30 31 32 33, à direita: 12
comando (81)
    à esquerda: 34 35, à direita: 9
comandoIF (82)
    à esquerda: 36 37, à direita: 34
comandoFOR (83)
    à esquerda: 38 39, à direita: 35
funcao (84)
    à esquerda: 40 41 42 43 44 45, à direita: 8
funcaoKernel (85)
    à esquerda: 46 47, à direita: 43
funcaoTrig (86)
    à esquerda: 48 49, à direita: 41
funcaoArit (87)
    à esquerda: 50 51 52 53, à direita: 40
funcaoProb (88)
    à esquerda: 54 55 56 57 58 59 60 61 62 63, à direita: 42
funcaoUser (89)
    à esquerda: 64, à direita: 45
listaparm (90)
    à esquerda: 65 66, à direita: 63 65
illegal (91)
    à esquerda: 67, à direita: 4
atributo (92)
    à esquerda: 68 69 70 71, à direita: 14 39
variavel (93)
    à esquerda: 72 73 74 75, à direita: 15 38
atribuicao (94)
    à esquerda: 76 77 78 79 80 81 82 83, à direita: 10 38 39
formula (95)
    à esquerda: 84, à direita: 16
funcaoPlugin (96)
    à esquerda: 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99, à direita:
    44


Estado 0

    0 $accept: . input "end of file"

    error    deslocar, e ir ao estado 1
    ILLEGAL  deslocar, e ir ao estado 2

    "end of file"  reduzir usando a regra 1 (input)
    NUMD           reduzir usando a regra 1 (input)
    NUMH           reduzir usando a regra 1 (input)
    CTEZERO        reduzir usando a regra 1 (input)
    fSIN           reduzir usando a regra 1 (input)
    fCOS           reduzir usando a regra 1 (input)
    fROUND         reduzir usando a regra 1 (input)
    fMOD           reduzir usando a regra 1 (input)
    fTRUNC         reduzir usando a regra 1 (input)
    fFRAC          reduzir usando a regra 1 (input)
    fEXP           reduzir usando a regra 1 (input)
    fEXPO          reduzir usando a regra 1 (input)
    fNORM          reduzir usando a regra 1 (input)
    fUNIF          reduzir usando a regra 1 (input)
    fWEIB          reduzir usando a regra 1 (input)
    fLOGN          reduzir usando a regra 1 (input)
    fGAMM          reduzir usando a regra 1 (input)
    fERLA          reduzir usando a regra 1 (input)
    fTRIA          reduzir usando a regra 1 (input)
    fBETA          reduzir usando a regra 1 (input)
    fDISC          reduzir usando a regra 1 (input)
    fTNOW          reduzir usando a regra 1 (input)
    fTFIN          reduzir usando a regra 1 (input)
    cIF            reduzir usando a regra 1 (input)
    cFOR           reduzir usando a regra 1 (input)
    ATRIB          reduzir usando a regra 1 (input)
    fNR            reduzir usando a regra 1 (input)
    fMR            reduzir usando a regra 1 (input)
    fIRF           reduzir usando a regra 1 (input)
    fRESSEIZES     reduzir usando a regra 1 (input)
    fSTATE         reduzir usando a regra 1 (input)
    fSETSUM        reduzir usando a regra 1 (input)
    fNQ            reduzir usando a regra 1 (input)
    fFIRSTINQ      reduzir usando a regra 1 (input)
    fLASTINQ       reduzir usando a regra 1 (input)
    fSAQUE         reduzir usando a regra 1 (input)
    fAQUE          reduzir usando a regra 1 (input)
    fNUMSET        reduzir usando a regra 1 (input)
    CSTAT          reduzir usando a regra 1 (input)
    fTAVG          reduzir usando a regra 1 (input)
    VARI           reduzir usando a regra 1 (input)
    FORM           reduzir usando a regra 1 (input)
    "("            reduzir usando a regra 1 (input)
    "-"            reduzir usando a regra 1 (input)
    '\n'           reduzir usando a regra 1 (input)
    "USER"         reduzir usando a regra 1 (input)

    input    ir ao estado 3
    illegal  ir ao estado 4


Estado 1

    5 input: error . '\n'

    '\n'  deslocar, e ir ao estado 5


Estado 2

   67 illegal: ILLEGAL .

    $padrão  reduzir usando a regra 67 (illegal)


Estado 3

    0 $accept: input . "end of file"
    2 input: input . '\n'
    3      | input . programa

    "end of file"  deslocar, e ir ao estado 6
    NUMD           deslocar, e ir ao estado 7
    NUMH           deslocar, e ir ao estado 8
    CTEZERO        deslocar, e ir ao estado 9
    fSIN           deslocar, e ir ao estado 10
    fCOS           deslocar, e ir ao estado 11
    fROUND         deslocar, e ir ao estado 12
    fMOD           deslocar, e ir ao estado 13
    fTRUNC         deslocar, e ir ao estado 14
    fFRAC          deslocar, e ir ao estado 15
    fEXP           deslocar, e ir ao estado 16
    fEXPO          deslocar, e ir ao estado 17
    fNORM          deslocar, e ir ao estado 18
    fUNIF          deslocar, e ir ao estado 19
    fWEIB          deslocar, e ir ao estado 20
    fLOGN          deslocar, e ir ao estado 21
    fGAMM          deslocar, e ir ao estado 22
    fERLA          deslocar, e ir ao estado 23
    fTRIA          deslocar, e ir ao estado 24
    fBETA          deslocar, e ir ao estado 25
    fDISC          deslocar, e ir ao estado 26
    fTNOW          deslocar, e ir ao estado 27
    fTFIN          deslocar, e ir ao estado 28
    cIF            deslocar, e ir ao estado 29
    cFOR           deslocar, e ir ao estado 30
    ATRIB          deslocar, e ir ao estado 31
    fNR            deslocar, e ir ao estado 32
    fMR            deslocar, e ir ao estado 33
    fIRF           deslocar, e ir ao estado 34
    fRESSEIZES     deslocar, e ir ao estado 35
    fSTATE         deslocar, e ir ao estado 36
    fSETSUM        deslocar, e ir ao estado 37
    fNQ            deslocar, e ir ao estado 38
    fFIRSTINQ      deslocar, e ir ao estado 39
    fLASTINQ       deslocar, e ir ao estado 40
    fSAQUE         deslocar, e ir ao estado 41
    fAQUE          deslocar, e ir ao estado 42
    fNUMSET        deslocar, e ir ao estado 43
    CSTAT          deslocar, e ir ao estado 44
    fTAVG          deslocar, e ir ao estado 45
    VARI           deslocar, e ir ao estado 46
    FORM           deslocar, e ir ao estado 47
    "("            deslocar, e ir ao estado 48
    "-"            deslocar, e ir ao estado 49
    '\n'           deslocar, e ir ao estado 50
    "USER"         deslocar, e ir ao estado 51

    programa      ir ao estado 52
    expressao     ir ao estado 53
    numero        ir ao estado 54
    aritmetica    ir ao estado 55
    relacional    ir ao estado 56
    comando       ir ao estado 57
    comandoIF     ir ao estado 58
    comandoFOR    ir ao estado 59
    funcao        ir ao estado 60
    funcaoKernel  ir ao estado 61
    funcaoTrig    ir ao estado 62
    funcaoArit    ir ao estado 63
    funcaoProb    ir ao estado 64
    funcaoUser    ir ao estado 65
    atributo      ir ao estado 66
    variavel      ir ao estado 67
    atribuicao    ir ao estado 68
    formula       ir ao estado 69
    funcaoPlugin  ir ao estado 70


Estado 4

    4 input: illegal .

    $padrão  reduzir usando a regra 4 (input)


Estado 5

    5 input: error '\n' .

    $padrão  reduzir usando a regra 5 (input)


Estado 6

    0 $accept: input "end of file" .

    $padrão  aceitar


Estado 7

   17 numero: NUMD .

    $padrão  reduzir usando a regra 17 (numero)


Estado 8

   18 numero: NUMH .

    $padrão  reduzir usando a regra 18 (numero)


Estado 9

   85 funcaoPlugin: CTEZERO .

    $padrão  reduzir usando a regra 85 (funcaoPlugin)


Estado 10

   48 funcaoTrig: fSIN . "(" expressao ")"

    "("  deslocar, e ir ao estado 71


Estado 11

   49 funcaoTrig: fCOS . "(" expressao ")"

    "("  deslocar, e ir ao estado 72


Estado 12

   50 funcaoArit: fROUND . "(" expressao ")"

    "("  deslocar, e ir ao estado 73


Estado 13

   53 funcaoArit: fMOD . "(" expressao "," expressao ")"

    "("  deslocar, e ir ao estado 74


Estado 14

   52 funcaoArit: fTRUNC . "(" expressao ")"

    "("  deslocar, e ir ao estado 75


Estado 15

   51 funcaoArit: fFRAC . "(" expressao ")"

    "("  deslocar, e ir ao estado 76


Estado 16

   24 aritmetica: fEXP . "(" expressao ")"

    "("  deslocar, e ir ao estado 77


Estado 17

   54 funcaoProb: fEXPO . "(" expressao ")"

    "("  deslocar, e ir ao estado 78


Estado 18

   55 funcaoProb: fNORM . "(" expressao "," expressao ")"

    "("  deslocar, e ir ao estado 79


Estado 19

   56 funcaoProb: fUNIF . "(" expressao "," expressao ")"

    "("  deslocar, e ir ao estado 80


Estado 20

   57 funcaoProb: fWEIB . "(" expressao "," expressao ")"

    "("  deslocar, e ir ao estado 81


Estado 21

   58 funcaoProb: fLOGN . "(" expressao "," expressao ")"

    "("  deslocar, e ir ao estado 82


Estado 22

   59 funcaoProb: fGAMM . "(" expressao "," expressao ")"

    "("  deslocar, e ir ao estado 83


Estado 23

   60 funcaoProb: fERLA . "(" expressao "," expressao ")"

    "("  deslocar, e ir ao estado 84


Estado 24

   61 funcaoProb: fTRIA . "(" expressao "," expressao "," expressao ")"

    "("  deslocar, e ir ao estado 85


Estado 25

   62 funcaoProb: fBETA . "(" expressao "," expressao "," expressao "," expressao ")"

    "("  deslocar, e ir ao estado 86


Estado 26

   63 funcaoProb: fDISC . "(" listaparm ")"

    "("  deslocar, e ir ao estado 87


Estado 27

   46 funcaoKernel: fTNOW .

    $padrão  reduzir usando a regra 46 (funcaoKernel)


Estado 28
